// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Image Debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product image"
    className=" productImg undefined"
    src="./Coffee-mug.png"
  />
</div>
`;

exports[`Product Image Debe mostrar el componente correctamente con la imagen personalizada 1`] = `
<img
  alt="Product image"
  className=" productImg undefined"
  src="./Coffee-mug.png"
/>
`;
